[gd_scene load_steps=33 format=2]

[ext_resource path="res://battle/BattleImage/TestBackground.png" type="Texture" id=1]
[ext_resource path="res://battle/Controll Buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://battle/Pockmon Info.tscn" type="PackedScene" id=3]
[ext_resource path="res://battle/Battle.gd" type="Script" id=4]
[ext_resource path="res://dpcomic (1).ttf" type="DynamicFontData" id=5]
[ext_resource path="res://battle/PackmonImage.gd" type="Script" id=6]
[ext_resource path="res://battle/PackmonImage2.gd" type="Script" id=7]
[ext_resource path="res://battle/Packmon Info2.tscn" type="PackedScene" id=8]
[ext_resource path="res://battle/attackmenu/Button.gd" type="Script" id=9]
[ext_resource path="res://battle/attackmenu/Button3.gd" type="Script" id=10]
[ext_resource path="res://battle/attackmenu/Button2.gd" type="Script" id=11]
[ext_resource path="res://battle/attackmenu/Button4.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.733333 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.917647, 0.858824, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.917647, 0.858824, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.917647, 0.858824, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.917647, 0.858824, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.603922, 0.564706, 0.545098, 1 )

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="BackpacksTeam" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -220.0
margin_bottom = 30.0

[node name="PackmonImage" type="TextureRect" parent="BackpacksTeam"]
margin_right = 100.0
script = ExtResource( 6 )

[node name="PackmonInfo" parent="BackpacksTeam" instance=ExtResource( 3 )]
margin_top = 4.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 20 )

[node name="Enemy" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -7.5
margin_bottom = 7.5

[node name="PackmonImage2" type="TextureRect" parent="Enemy"]
margin_right = 100.0
script = ExtResource( 7 )

[node name="PackmonInfo" parent="Enemy" instance=ExtResource( 8 )]
margin_top = 4.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 20 )

[node name="actionmenu" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="actionmenu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 21.25
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 2 )
text = "default"
script = ExtResource( 9 )

[node name="Button2" type="Button" parent="actionmenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -77.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 21.25
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 3 )
text = "default"
script = ExtResource( 11 )

[node name="Button3" type="Button" parent="actionmenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -8.125
margin_right = 82.0
margin_bottom = 8.125
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 4 )
text = "default"
script = ExtResource( 10 )

[node name="Button4" type="Button" parent="actionmenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -8.125
margin_right = -5.0
margin_bottom = 8.125
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 5 )
text = "default"
script = ExtResource( 12 )

[node name="HBoxContainer" parent="actionmenu" instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -20.0
margin_right = 80.0
margin_bottom = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -10.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/normal_font = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Hekkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"
scroll_active = false

[connection signal="pressed" from="actionmenu/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="actionmenu/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="actionmenu/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="actionmenu/Button4" to="." method="_on_Button4_pressed"]
